newtype-tools/tests/trybuild/union.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/trybuild/union.rs:2:1
  |
2 | union U {
  | ^^^^^
